# mirgovorit-test

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
book/: admin.py  models.py  tests.py  views.py
book/migrations/: 0001_initial.py
mir_govorit_test/: asgi.py  settings.py  urls.py  wsgi.py
templates/: recipes.html
